# ODIN

./: .gitignore  README.md  app.json  expo-env.d.ts  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: PANTHEON.md  ROADMAP.md
odin/: ARCHITECTURE_DECISIONS.md  DEMO.md  PROGRESS.md  README.md  __init__.py
odin/agents/: base.py  freya_renderer.py  loki_critic.py  odin_planner.py  research.py  thor_executor.py
odin/cli/: main.py
odin/core/: orchestrator.py
odin/github/: __init__.py  bifrost.py
odin/improve/: __init__.py  benchmark.py  evaluator.py  muninn.py  rollback.py  sandbox.py  shell.py  telemetry.py
odin/jobs/: __init__.py  delegation.py  scheduler.py  store.py
odin/memory/: backends.py  mimir.py
odin/observe/: __init__.py  history.py
odin/routing/: llm_adapter.py
odin/safety/: heimdall.py  injection.py
odin/schemas/: __init__.py  common.py
odin/skills/: __init__.py  extraction.py  reflection.py  store.py
odin/society/: __init__.py  agents.py  debate.py  ensemble.py  (+1 more)
tests/: test_backends.py  test_benchmark.py  test_dag_parallel.py  test_delegation.py  test_evaluator.py  test_heimdall.py  test_injection_ml.py  test_jobs_store.py  test_llm_adapter.py  test_memory.py  test_muninn.py  test_observability.py  test_orchestrator.py  test_research.py  test_rollback.py  test_sandbox.py  test_scheduler.py  test_schemas.py  test_self_modification.py  test_similarity.py  test_skills_extraction.py  test_skills_reflection.py  test_skills_store.py  test_society.py  test_telemetry.py  test_tools.py  test_verify.py  test_world_model.py
(+24 files in other folders)
