[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["odin"]

[project]
name = "odin-agent"
version = "0.1.0"
description = "ODIN — Orchestrated Deductive Intelligence Network"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
    "anthropic>=0.39,<1",
    "openai>=1.50,<2",
    "chromadb>=0.5,<1",
    "networkx>=3.2,<4",
    "tiktoken>=0.7,<1",
    "httpx>=0.27,<1",
    "tavily-python>=0.5,<1",
    "click>=8.1,<9",
    "rich>=13.7,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.7,<1",
    "mypy>=1.11,<2",
    "types-networkx",
]

[project.scripts]
odin = "odin.cli.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["chromadb.*", "anthropic.*", "tavily.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
